--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "regular";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "2.6.95" !default;
+$mdi-version:          "2.7.94" !default;
 
 $mdi-icons: (
     "access-point": F002,
@@ -17,8 +17,11 @@ $mdi-icons: (
     "account-box-outline": F007,
     "account-card-details": F5D2,
     "account-check": F008,
+    "account-child": FA88,
+    "account-child-circle": FA89,
     "account-circle": F009,
     "account-convert": F00A,
+    "account-details": F631,
     "account-edit": F6BB,
     "account-group": F848,
     "account-heart": F898,
@@ -40,8 +43,9 @@ $mdi-icons: (
     "account-search": F016,
     "account-search-outline": F934,
     "account-settings": F630,
-    "account-settings-variant": F631,
     "account-star": F017,
+    "account-supervisor": FA8A,
+    "account-supervisor-circle": FA8B,
     "account-switch": F019,
     "accusoft": F849,
     "adjust": F01A,
@@ -80,9 +84,11 @@ $mdi-icons: (
     "amazon-alexa": F8C5,
     "amazon-drive": F02E,
     "ambulance": F02F,
+    "ampersand": FA8C,
     "amplifier": F030,
     "anchor": F031,
     "android": F032,
+    "android-auto": FA8D,
     "android-debug-bridge": F033,
     "android-head": F78F,
     "android-studio": F034,
@@ -92,7 +98,9 @@ $mdi-icons: (
     "angular": F6B1,
     "angularjs": F6BE,
     "animation": F5D8,
+    "animation-outline": FA8E,
     "animation-play": F939,
+    "animation-play-outline": FA8F,
     "anvil": F89A,
     "apple": F035,
     "apple-finder": F036,
@@ -302,11 +310,14 @@ $mdi-icons: (
     "behance": F099,
     "bell": F09A,
     "bell-off": F09B,
+    "bell-off-outline": FA90,
     "bell-outline": F09C,
     "bell-plus": F09D,
+    "bell-plus-outline": FA91,
     "bell-ring": F09E,
     "bell-ring-outline": F09F,
     "bell-sleep": F0A0,
+    "bell-sleep-outline": FA92,
     "beta": F0A1,
     "betamax": F9CA,
     "bible": F0A2,
@@ -337,15 +348,19 @@ $mdi-icons: (
     "bomb-off": F6C4,
     "bone": F0B9,
     "book": F0BA,
+    "book-lock": F799,
+    "book-lock-open": F79A,
     "book-minus": F5D9,
     "book-multiple": F0BB,
+    "book-multiple-minus": FA93,
+    "book-multiple-plus": FA94,
+    "book-multiple-remove": FA95,
     "book-multiple-variant": F0BC,
     "book-open": F0BD,
     "book-open-page-variant": F5DA,
     "book-open-variant": F0BE,
     "book-plus": F5DB,
-    "book-secure": F799,
-    "book-unsecure": F79A,
+    "book-remove": FA96,
     "book-variant": F0BF,
     "bookmark": F0C0,
     "bookmark-check": F0C1,
@@ -391,6 +406,7 @@ $mdi-icons: (
     "briefcase": F0D6,
     "briefcase-check": F0D7,
     "briefcase-download": F0D8,
+    "briefcase-edit": FA97,
     "briefcase-minus": FA29,
     "briefcase-outline": F813,
     "briefcase-plus": FA2A,
@@ -418,6 +434,7 @@ $mdi-icons: (
     "bullseye": F5DD,
     "bullseye-arrow": F8C8,
     "bus": F0E7,
+    "bus-alert": FA98,
     "bus-articulated-end": F79B,
     "bus-articulated-front": F79C,
     "bus-clock": F8C9,
@@ -429,6 +446,7 @@ $mdi-icons: (
     "cake-layered": F0EA,
     "cake-variant": F0EB,
     "calculator": F0EC,
+    "calculator-variant": FA99,
     "calendar": F0ED,
     "calendar-alert": FA30,
     "calendar-blank": F0EE,
@@ -481,6 +499,7 @@ $mdi-icons: (
     "candle": F5E2,
     "candycane": F10A,
     "cannabis": F7A5,
+    "caps-lock": FA9A,
     "car": F10B,
     "car-battery": F10C,
     "car-connected": F10D,
@@ -510,6 +529,7 @@ $mdi-icons: (
     "cash": F114,
     "cash-100": F115,
     "cash-multiple": F116,
+    "cash-refund": FA9B,
     "cash-usd": F117,
     "cassette": F9D3,
     "cast": F118,
@@ -562,6 +582,7 @@ $mdi-icons: (
     "check-circle-outline": F5E1,
     "check-decagram": F790,
     "check-outline": F854,
+    "checkbook": FA9C,
     "checkbox-blank": F12E,
     "checkbox-blank-circle": F12F,
     "checkbox-blank-circle-outline": F130,
@@ -613,6 +634,14 @@ $mdi-icons: (
     "circle-edit-outline": F8D4,
     "circle-medium": F9DD,
     "circle-outline": F765,
+    "circle-slice-1": FA9D,
+    "circle-slice-2": FA9E,
+    "circle-slice-3": FA9F,
+    "circle-slice-4": FAA0,
+    "circle-slice-5": FAA1,
+    "circle-slice-6": FAA2,
+    "circle-slice-7": FAA3,
+    "circle-slice-8": FAA4,
     "circle-small": F9DE,
     "cisco-webex": F145,
     "city": F146,
@@ -691,6 +720,8 @@ $mdi-icons: (
     "coin": F178,
     "coins": F694,
     "collage": F640,
+    "collapse-all": FAA5,
+    "collapse-all-outline": FAA6,
     "color-helper": F179,
     "comment": F17A,
     "comment-account": F17B,
@@ -756,6 +787,7 @@ $mdi-icons: (
     "credit-card-multiple": F19C,
     "credit-card-off": F5E4,
     "credit-card-plus": F675,
+    "credit-card-refund": FAA7,
     "credit-card-scan": F19D,
     "credit-card-settings": F8D6,
     "crop": F19E,
@@ -804,8 +836,10 @@ $mdi-icons: (
     "cursor-pointer": F1B7,
     "cursor-text": F5E7,
     "database": F1B8,
+    "database-check": FAA8,
     "database-export": F95D,
     "database-import": F95C,
+    "database-lock": FAA9,
     "database-minus": F1B9,
     "database-plus": F1BA,
     "database-search": F865,
@@ -834,6 +868,7 @@ $mdi-icons: (
     "desktop-mac": F1C4,
     "desktop-mac-dashboard": F9E7,
     "desktop-tower": F1C5,
+    "desktop-tower-monitor": FAAA,
     "details": F1C6,
     "developer-board": F696,
     "deviantart": F1C7,
@@ -860,6 +895,7 @@ $mdi-icons: (
     "disc-alert": F1D1,
     "disc-player": F95F,
     "discord": F66F,
+    "dishwasher": FAAB,
     "disqus": F1D2,
     "disqus-outline": F1D3,
     "division": F1D4,
@@ -872,6 +908,7 @@ $mdi-icons: (
     "docker": F867,
     "doctor": FA41,
     "dog": FA42,
+    "dog-service": FAAC,
     "dog-side": FA43,
     "dolby": F6B2,
     "domain": F1D7,
@@ -880,6 +917,7 @@ $mdi-icons: (
     "door-closed": F81A,
     "door-open": F81B,
     "doorbell-video": F868,
+    "dot-net": FAAD,
     "dots-horizontal": F1D8,
     "dots-horizontal-circle": F7C2,
     "dots-vertical": F1D9,
@@ -907,6 +945,8 @@ $mdi-icons: (
     "earth-box-off": F6CD,
     "earth-off": F1E8,
     "edge": F1E9,
+    "egg": FAAE,
+    "egg-easter": FAAF,
     "eight-track": F9E9,
     "eject": F1EA,
     "elephant": F7C5,
@@ -915,6 +955,9 @@ $mdi-icons: (
     "elevator": F1ED,
     "email": F1EE,
     "email-alert": F6CE,
+    "email-check": FAB0,
+    "email-check-outline": FAB1,
+    "email-lock": F1F1,
     "email-open": F1EF,
     "email-open-outline": F5EF,
     "email-outline": F1F0,
@@ -922,7 +965,6 @@ $mdi-icons: (
     "email-plus-outline": F9EB,
     "email-search": F960,
     "email-search-outline": F961,
-    "email-secure": F1F1,
     "email-variant": F5F0,
     "emby": F6B3,
     "emoticon": F1F2,
@@ -944,6 +986,7 @@ $mdi-icons: (
     "eraser": F1FE,
     "eraser-variant": F642,
     "escalator": F1FF,
+    "et": FAB2,
     "ethereum": F869,
     "ethernet": F200,
     "ethernet-cable": F201,
@@ -955,6 +998,8 @@ $mdi-icons: (
     "exclamation": F205,
     "exit-run": FA47,
     "exit-to-app": F206,
+    "expand-all": FAB3,
+    "expand-all-outline": FAB4,
     "exponent": F962,
     "exponent-box": F963,
     "export": F207,
@@ -988,6 +1033,7 @@ $mdi-icons: (
     "file-account": F73A,
     "file-alert": FA4A,
     "file-alert-outline": FA4B,
+    "file-cabinet": FAB5,
     "file-chart": F215,
     "file-check": F216,
     "file-cloud": F217,
@@ -995,6 +1041,8 @@ $mdi-icons: (
     "file-delimited": F218,
     "file-document": F219,
     "file-document-box": F21A,
+    "file-document-box-multiple": FAB6,
+    "file-document-box-multiple-outline": FAB7,
     "file-document-box-outline": F9EC,
     "file-document-outline": F9ED,
     "file-download": F964,
@@ -1007,6 +1055,7 @@ $mdi-icons: (
     "file-image": F21F,
     "file-import": F220,
     "file-lock": F221,
+    "file-move": FAB8,
     "file-multiple": F222,
     "file-music": F223,
     "file-outline": F224,
@@ -1075,6 +1124,8 @@ $mdi-icons: (
     "flower-tulip-outline": F9F1,
     "folder": F24B,
     "folder-account": F24C,
+    "folder-clock": FAB9,
+    "folder-clock-outline": FABA,
     "folder-download": F24D,
     "folder-edit": F8DD,
     "folder-google-drive": F24E,
@@ -1114,6 +1165,7 @@ $mdi-icons: (
     "format-align-middle": F753,
     "format-align-right": F263,
     "format-align-top": F754,
+    "format-annotation-minus": FABB,
     "format-annotation-plus": F646,
     "format-bold": F264,
     "format-clear": F265,
@@ -1218,10 +1270,14 @@ $mdi-icons: (
     "gentoo": F8E7,
     "gesture": F7CA,
     "gesture-double-tap": F73B,
+    "gesture-pinch": FABC,
+    "gesture-spread": FABD,
     "gesture-swipe-down": F73C,
+    "gesture-swipe-horizontal": FABE,
     "gesture-swipe-left": F73D,
     "gesture-swipe-right": F73E,
     "gesture-swipe-up": F73F,
+    "gesture-swipe-vertical": FABF,
     "gesture-tap": F740,
     "gesture-two-double-tap": F741,
     "gesture-two-tap": F742,
@@ -1292,6 +1348,7 @@ $mdi-icons: (
     "guitar-pick-outline": F2C6,
     "guy-fawkes-mask": F824,
     "hackernews": F624,
+    "hail": FAC0,
     "hamburger": F684,
     "hammer": F8E9,
     "hand": FA4E,
@@ -1327,6 +1384,7 @@ $mdi-icons: (
     "heart-off": F758,
     "heart-outline": F2D5,
     "heart-pulse": F5F6,
+    "helicopter": FAC1,
     "help": F2D6,
     "help-box": F78A,
     "help-circle": F2D7,
@@ -1335,6 +1393,14 @@ $mdi-icons: (
     "hexagon": F2D8,
     "hexagon-multiple": F6E0,
     "hexagon-outline": F2D9,
+    "hexagon-slice-1": FAC2,
+    "hexagon-slice-2": FAC3,
+    "hexagon-slice-3": FAC4,
+    "hexagon-slice-4": FAC5,
+    "hexagon-slice-5": FAC6,
+    "hexagon-slice-6": FAC7,
+    "hexagram": FAC8,
+    "hexagram-outline": FAC9,
     "high-definition": F7CE,
     "high-definition-box": F877,
     "highway": F5F7,
@@ -1460,7 +1526,11 @@ $mdi-icons: (
     "knife-military": F9FB,
     "kodi": F314,
     "label": F315,
+    "label-off": FACA,
+    "label-off-outline": FACB,
     "label-outline": F316,
+    "label-variant": FACC,
+    "label-variant-outline": FACD,
     "ladybug": F82C,
     "lambda": F627,
     "lamp": F6B4,
@@ -1480,6 +1550,7 @@ $mdi-icons: (
     "language-python": F320,
     "language-python-text": F321,
     "language-r": F7D3,
+    "language-ruby-on-rails": FACE,
     "language-swift": F6E4,
     "language-typescript": F6E5,
     "laptop": F322,
@@ -1487,6 +1558,7 @@ $mdi-icons: (
     "laptop-mac": F324,
     "laptop-off": F6E6,
     "laptop-windows": F325,
+    "laravel": FACF,
     "lastfm": F326,
     "lastpass": F446,
     "launch": F327,
@@ -1581,6 +1653,8 @@ $mdi-icons: (
     "markdown": F354,
     "marker": F652,
     "marker-check": F355,
+    "mastodon": FAD0,
+    "mastodon-variant": FAD1,
     "material-design": F985,
     "material-ui": F357,
     "math-compass": F358,
@@ -1589,6 +1663,7 @@ $mdi-icons: (
     "medal": F986,
     "medical-bag": F6EE,
     "medium": F35A,
+    "meetup": FAD2,
     "memory": F35B,
     "menu": F35C,
     "menu-down": F35D,
@@ -1672,6 +1747,7 @@ $mdi-icons: (
     "music-box": F384,
     "music-box-outline": F385,
     "music-circle": F386,
+    "music-circle-outline": FAD3,
     "music-note": F387,
     "music-note-bluetooth": F5FE,
     "music-note-bluetooth-off": F5FF,
@@ -1843,7 +1919,7 @@ $mdi-icons: (
     "phone-hangup": F3F5,
     "phone-in-talk": F3F6,
     "phone-incoming": F3F7,
-    "phone-locked": F3F8,
+    "phone-lock": F3F8,
     "phone-log": F3F9,
     "phone-minus": F658,
     "phone-missed": F3FA,
@@ -1872,6 +1948,8 @@ $mdi-icons: (
     "pine-tree-box": F406,
     "pinterest": F407,
     "pinterest-box": F408,
+    "pinwheel": FAD4,
+    "pinwheel-outline": FAD5,
     "pipe": F7E4,
     "pipe-disconnected": F7E5,
     "pipe-leak": F888,
@@ -1971,6 +2049,8 @@ $mdi-icons: (
     "rabbit": F906,
     "radar": F437,
     "radiator": F438,
+    "radiator-disabled": FAD6,
+    "radiator-off": FAD7,
     "radio": F439,
     "radio-handheld": F43A,
     "radio-tower": F43B,
@@ -2066,7 +2146,7 @@ $mdi-icons: (
     "scanner": F6AA,
     "scanner-off": F909,
     "school": F474,
-    "scissor-cutting": FA6A,
+    "scissors-cutting": FA6A,
     "screen-rotation": F475,
     "screen-rotation-lock": F476,
     "screwdriver": F477,
@@ -2092,6 +2172,7 @@ $mdi-icons: (
     "security-off": F99D,
     "select": F485,
     "select-all": F486,
+    "select-compare": FAD8,
     "select-drag": FA6B,
     "select-inverse": F487,
     "select-off": F488,
@@ -2099,7 +2180,7 @@ $mdi-icons: (
     "selection-drag": FA6C,
     "selection-off": F776,
     "send": F48A,
-    "send-secure": F7EC,
+    "send-lock": F7EC,
     "serial-port": F65C,
     "server": F48B,
     "server-minus": F48C,
@@ -2135,7 +2216,12 @@ $mdi-icons: (
     "shield": F498,
     "shield-half-full": F77F,
     "shield-outline": F499,
+    "shield-plus": FAD9,
+    "shield-plus-outline": FADA,
+    "shield-remove": FADB,
+    "shield-remove-outline": FADC,
     "ship-wheel": F832,
+    "shopify": FADD,
     "shopping": F49A,
     "shopping-music": F49B,
     "shovel": F70F,
@@ -2172,6 +2258,7 @@ $mdi-icons: (
     "sim": F4A7,
     "sim-alert": F4A8,
     "sim-off": F4A9,
+    "sina-weibo": FADE,
     "sitemap": F4AA,
     "skip-backward": F4AB,
     "skip-forward": F4AC,
@@ -2229,6 +2316,7 @@ $mdi-icons: (
     "spotlight": F4C8,
     "spotlight-beam": F4C9,
     "spray": F665,
+    "spray-bottle": FADF,
     "square": F763,
     "square-edit-outline": F90B,
     "square-inc": F4CA,
@@ -2239,6 +2327,7 @@ $mdi-icons: (
     "square-root": F783,
     "square-root-box": F9A2,
     "square-small": FA14,
+    "squeegee": FAE0,
     "ssh": F8BF,
     "stack-exchange": F60B,
     "stack-overflow": F4CC,
@@ -2251,9 +2340,13 @@ $mdi-icons: (
     "star-circle": F4CF,
     "star-circle-outline": F9A3,
     "star-face": F9A4,
+    "star-four-points": FAE1,
+    "star-four-points-outline": FAE2,
     "star-half": F4D0,
     "star-off": F4D1,
     "star-outline": F4D2,
+    "star-three-points": FAE3,
+    "star-three-points-outline": FAE4,
     "steam": F4D3,
     "steam-box": F90C,
     "steering": F4D4,
@@ -2294,6 +2387,7 @@ $mdi-icons: (
     "switch": F4E4,
     "sword": F4E5,
     "sword-cross": F786,
+    "symfony": FAE5,
     "sync": F4E6,
     "sync-alert": F4E7,
     "sync-off": F4E8,
@@ -2489,8 +2583,10 @@ $mdi-icons: (
     "van-passenger": F7F9,
     "van-utility": F7FA,
     "vanish": F7FB,
+    "variable": FAE6,
     "vector-arrange-above": F554,
     "vector-arrange-below": F555,
+    "vector-bezier": FAE7,
     "vector-circle": F556,
     "vector-circle-variant": F557,
     "vector-combine": F558,
@@ -2657,6 +2753,7 @@ $mdi-icons: (
     "window-restore": F5B2,
     "windows": F5B3,
     "windows-classic": FA20,
+    "wiper": FAE8,
     "wordpress": F5B4,
     "worker": F5B5,
     "wrap": F5B6,
@@ -2689,6 +2786,8 @@ $mdi-icons: (
     "youtube-creator-studio": F846,
     "youtube-gaming": F847,
     "youtube-tv": F448,
+    "z-wave": FAE9,
+    "zend": FAEA,
     "zip-box": F5C4,
     "zip-disk": FA22,
     "zodiac-aquarius": FA7C,
