--- a/scss/_var-icons.scss
+++ b/scss/_var-icons.scss
@@ -1,56 +1,70 @@
 $mdi-icons: (
-     "cama": 61,
-     "cama-bloqueada": 62,
-     "calificador": 63,
-     "cama-reparacion": 64,
+     "rup-semantic-trastorno": 50,
+     "rup-semantic-todos": 51,
+     "rup-semantic-producto": 52,
+     "icon-rup-semantic-plan-1": 53,
+     "rup-semantic-plan": 54,
+     "rup-semantic-hallazgo": 55,
+     "rup-semantic-dispositivo": 56,
+     "semantic-elementoderegistro": 57,
+     "alertas": 61,
+     "arbol": 62,
+     "cama": 63,
+     "cama-bloqueada": 64,
      "cama-candado": 65,
-     "check": 66,
-     "cama-desocupada": 67,
+     "cama-check": 66,
      "cama-femenino": 68,
-     "herramienta": 69,
+     "cama-lapiz-1": 69,
      "cama-lapiz": 6a,
-     "cama-ocupada": 6b,
-     "oxigeno": 6c,
-     "cama-pausada": 6d,
-     "cama-reloj": 6e,
-     "masculino": 6f,
-     "maltrato": 70,
-     "violencia-familiar": 71,
-     "vacuna": 72,
-     "logo": 73,
-     "laboratorio": 74,
-     "turno": 75,
+     "cama-masculino": 6b,
+     "cama-ocupada": 6c,
+     "cama-oxigeno": 6d,
+     "cama-pausada": 6e,
+     "cama-reloj": 6f,
+     "cama-configuracion": 70,
+     "dieta": 71,
+     "documento": 72,
+     "egreso": 73,
+     "rup-calificador": 75,
      "agendas": 76,
-     "marker": 77,
-     "marker-salud": 78,
-     "alerta": 79,
-     "ambulancia": 7a,
-     "mpi": 41,
-     "bomberos": 42,
-     "noticia": 43,
-     "paciente": 44,
-     "confirmar": 45,
-     "defensa-civil": 46,
-     "paciente-circulo": 47,
-     "policia": 48,
-     "farmacia": 49,
-     "horario": 4a,
-     "profesional": 4b,
-     "profesional-circulo": 4c,
-     "hospital": 4d,
-     "huds": 4e,
-     "telefono": 4f,
-     "trastorno": 50,
-     "semantics": 51,
-     "producto": 52,
-     "procedimiento": 53,
-     "plan": 54,
-     "hallazgo": 55,
-     "dispositivo": 56,
-     "elemento-registro": 57,
-     "centro-salud": 58,
-     "calendario-dia": 59,
-     "calendario-rango": 5a,
-     "llamar": 32,
-     "maltrato-infantil": 33,
+     "alerta": 77,
+     "ambulancia": 78,
+     "bomberos": 79,
+     "confirmar": 7a,
+     "defensa-civil": 41,
+     "farmacia": 42,
+     "horario": 43,
+     "hospital": 44,
+     "huds": 45,
+     "laboratorio": 46,
+     "logo": 47,
+     "maltrato": 48,
+     "marker": 49,
+     "marker-salud": 4a,
+     "mpi": 4b,
+     "noticia": 4c,
+     "paciente": 4d,
+     "policia": 4f,
+     "profesional": 58,
+     "profesional-circulo": 59,
+     "telefono": 5a,
+     "turno": 30,
+     "vacuna": 31,
+     "violencia-familiar": 32,
+     "hospital-cyan": 33,
+     "calendario-dia-oscuro": 34,
+     "calendario-rango-oscuro": 35,
+     "defensa-civil-oscuro": 39,
+     "llamar-oscuro": 36,
+     "cama-reparacion": 67,
+     "andes-icon-cama-reparacion": 37,
+     "cuna": 38,
+     "cuna-bloqueada": 21,
+     "cuna-desocupada": 22,
+     "cuna-pausada-1": 23,
+     "cuna-pausada": 24,
+     "cuna-reparacion": 25,
+     "cama-desocupada": 67,
+     "paciente-circulo": 4e,
+     "evoluciones": 74,
 );
